# maf-chat-agents-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: cloud-deploy.md  extensions.md  run-docker.md  run-local.md  testing-ci.md
scripts/: run_sample_cases.py
src/chat_agents_system/: api_server.py  config.py  devui_app.py  schemas.py  utils.py  workflow.py
src/chat_agents_system/agents/: __init__.py  classification.py  conversational_intake.py  dispatcher.py  historian.py  identity.py  intake.py  response_formatter.py  validation.py  workflow_conversational.py
src/chat_agents_system/api/: __init__.py  main.py
src/chat_agents_system/api/routes/: __init__.py  health.py  tickets.py
src/obungi_chat_agents_system/: api_server.py  cli.py  devui_app.py  schemas.py  utils.py  workflow.py
src/obungi_chat_agents_system/agents/: __init__.py  classification.py  conversational_intake.py  dispatcher.py  historian.py  identity.py  intake.py  response_formatter.py  validation.py  workflow_conversational.py
terraform/: README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_api_tickets.py
